vlib/v/checker/tests/like_operator_outside_orm_2_error.vv
fn main() {
	name := 'Luke'
	ret := name like 'L%'
	println(ret)
}
